- added function to reset the tensorflow graph - some minor adjustments regarding the storage class and the data loading
